Fixing position sticky on Header bug, parent can not have overflow hidden

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,9 +2,8 @@
 
 #app {
   /* max-width: 1920px; */
-  max-width: 1300px;
+  max-width: 1400px;
   margin: 0 auto;
-  overflow-x: hidden;
   font-weight: normal;
   color: var(--text-color);
 }
